gcc/testsuite/rust/compile/features/register_tool_not_activated.rs
#![register_tool(my_tool)] // { dg-error "register tool is an experimental feature" }

fn main() {}
